[package]
name = "eth_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
warp = "0.3.2"
reqwest = {version = "0.11.11", features = ["blocking"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sqlite = "0.27.0"
chrono="0.4.22"